[package]
name = "tokio"
version = "0.1.0"
authors = ["chenej <chenej@gzyitop.com>"]

[dependencies]
bytes = "0.4"
futures = "0.1"
tokio-io = "0.1"
tokio-proto = "0.1"
tokio-service = "0.1"
tokio-core = "0.1"
tokio-tls = "0.1"
native-tls = "*"

log = "0.3"
env_logger = "0.3"
trust-dns = { version = "0.9.2", default-features = false }

tokio-timer = "0.1"
futures-cpupool = "0.1"

[lib]
name = "mqtt"
